2006-12-21  Stefan Bjork  <betula@users.sourceforge.net>
	* src/plugins/DetAncestralReport.py,
	* src/plugins/DetDescendantReport.py: Add dot (".") after event
	descriptions.
	* src/DateHandler/_Date_sv.py: Use en-dash in time spans.

2006-12-20  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_Plugins.py (PluginDialog.__init__): Connect to
	signal in the parent class.

2006-12-20  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: use a container for bookmarks to prevent
	lost of data (bug #777)
	* src/GrampsDb/_GrampsDbBase.py: use a container for bookmarks to prevent
	lost of data (bug #777)
	* src/GrampsDb/_GrampsBSDDB.py: use a container for bookmarks to prevent
	lost of data (bug #777)
	* src/Bookmarks.py: use a container for bookmarks to prevent
	lost of data (bug #777)
	* src/DisplayModels/_BaseModel.py (BaseModel.__init__): choose
	correct sort column

2006-12-19  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_Plugins.py: Emit signal on rebuild, rebuild
	open plugin dialogs on rebuild.
	* src/ViewManager.py: Use signal to rebuild plugin menus.
	* src/DisplayState.py (DisplayState.__signals__): Register signal
	to indicate plugin reloading.

2006-12-19  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py (ViewManager.post_load_newdb): make sure to enable
	the readonly menu items

2006-12-19  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_PersonView.py (person_removed): Typo.
	* src/PluginUtils/_Options.py (save): Use unicode, not str.

2006-12-18  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_Options.py (save): Escape special characters.

2006-12-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: exact search for gender (bug #633)
	* src/DisplayModels/_PeopleModel.py: exact search for gender (bug #633)
	* src/Filters/_SearchFilter.py: exact search for gender (bug #633)
	* src/Filters/__init__.py: export ExactSearchFilter