@@ -1,3 +1,7 @@
+2006-12-21  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_GrampsXMLDB.py: fix bookmarks
+	* TODO: update
+
 2006-12-21  Stefan Bjork  <betula@users.sourceforge.net>
 	* src/plugins/DetAncestralReport.py,
 	* src/plugins/DetDescendantReport.py: Add dot (".") after event
